--- a/src/scss/style-blogs.scss
+++ b/src/scss/style-blogs.scss
@@ -1,7 +1,7 @@
 @import 'reset';
 @import 'variables';
 
-.containner {
+.container {
   margin: 5%;
   display: flex;
   justify-content: center;
@@ -11,6 +11,25 @@
 
   .post {
     max-width: 720px;
+
+    .pub-date {
+      p {
+        line-height: 0.5rem;
+      }
+    }
+
+    .autor-data-container {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      margin: 2rem 0rem;
+
+      img {
+        width: clamp(60px, 10vw, 90px);
+        border: solid 3px $color-primary;
+        border-radius: 100px;
+      }
+    }
   }
 
   .side-bar {
@@ -33,7 +52,7 @@
       gap: 3rem;
     }
     .artigos {
-      border: 3px solid $color-text;
+      //   border: 3px solid $color-text;
       border-radius: 30px;
       display: flex;
       flex-direction: column;
@@ -57,4 +76,61 @@
       }
     }
   }
+}
+
+//-------- texto posts --------//
+.post-content {
+  .video {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 1rem;
+  }
+
+  .video iframe {
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    border-radius: 30px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    border: none;
+    overflow: hidden;
+    display: block;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-align: left;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  h3 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-align: left;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  p {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  img {
+    max-width: 500px;
+  }
+
+  figcaption {
+    font-style: italic;
+    margin-top: -1rem;
+  }
+}
+
+.highlight-numbers {
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: $color-secondary;
+  text-shadow:
+    -1px -1px 1px rgba(255, 255, 255, 0.1),
+    1px 1px 1px rgba(0, 0, 0, 0.5);
 }
