--- a/src/css/style-blogs.css
+++ b/src/css/style-blogs.css
@@ -89,7 +89,6 @@ h3 {
 
 p {
   font-size: clamp(1rem, 2vw, 1.2rem);
-  max-width: 50ch;
 }
 
 p a {
@@ -272,25 +271,34 @@ footer .rights_reserved .obs {
   font-size: 0.7rem;
 }
 
-.flip-container > * {
-  /* allow transforms */
-  transition: transform 0.3s ease;
-}
-
-.containner {
+.container {
   margin: 5%;
   display: flex;
   justify-content: center;
 }
 @media (max-width: 768px) {
-  .containner {
+  .container {
     flex-wrap: wrap;
   }
 }
-.containner .post {
+.container .post {
   max-width: 720px;
 }
-.containner .side-bar {
+.container .post .pub-date p {
+  line-height: 0.5rem;
+}
+.container .post .autor-data-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin: 2rem 0rem;
+}
+.container .post .autor-data-container img {
+  width: clamp(60px, 10vw, 90px);
+  border: solid 3px #08aeaf;
+  border-radius: 100px;
+}
+.container .side-bar {
   max-width: 400px;
   min-width: 300px;
   display: flex;
@@ -298,7 +306,7 @@ footer .rights_reserved .obs {
   gap: 2rem;
   padding-right: 0;
 }
-.containner .side-bar .ajuda {
+.container .side-bar .ajuda {
   background-image: linear-gradient(to bottom, rgba(195, 220, 200, 0.4666666667), rgba(245, 234, 210, 0.1607843137));
   border: 3px solid #033b3b;
   border-radius: 30px;
@@ -309,24 +317,70 @@ footer .rights_reserved .obs {
   padding: 2rem;
   gap: 3rem;
 }
-.containner .side-bar .artigos {
-  border: 3px solid #033b3b;
+.container .side-bar .artigos {
   border-radius: 30px;
   display: flex;
   flex-direction: column;
   padding: 2rem 1rem 2rem;
   gap: 2rem;
 }
-.containner .side-bar .artigos ul {
+.container .side-bar .artigos ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-.containner .side-bar .artigos ul li {
+.container .side-bar .artigos ul li {
   border-left: 3px solid #08aeaf;
   padding-left: 0.5rem;
 }
-.containner .side-bar .artigos ul li p {
+.container .side-bar .artigos ul li p {
   font-size: 0.8rem;
   line-height: 1rem;
+}
+
+.post-content .video {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+.post-content .video iframe {
+  width: 100%;
+  aspect-ratio: 16/9;
+  border-radius: 30px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  border: none;
+  overflow: hidden;
+  display: block;
+}
+.post-content h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: left;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.post-content h3 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: left;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.post-content p {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.post-content img {
+  max-width: 500px;
+}
+.post-content figcaption {
+  font-style: italic;
+  margin-top: -1rem;
+}
+
+.highlight-numbers {
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: #319e4e;
+  text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
