--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,6 +75,7 @@ h1 {
   font-size: clamp(1.5rem, 5vw, 2.5rem);
   font-weight: 700;
   line-height: 1.3em;
+  text-wrap: balance;
 }
 
 h2 {
@@ -90,6 +91,10 @@ h3 {
 
 p {
   font-size: clamp(1rem, 2vw, 1.2rem);
+}
+
+address {
+  font-style: normal;
 }
 
 p a {
