post processo terapeutico concluido

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -24,7 +24,7 @@
               class="img_link"
               href="https://www.tiktok.com/@eftclub"
               target="_blank"
-              ><img src="/images/tiktok-icon.svg" alt=""
+              ><img src="/images/icons/tiktok-icon.svg" alt=""
             /></a>
           </li>
           <li>
@@ -32,7 +32,7 @@
               class="img_link"
               href="https://www.youtube.com/@eftclub/"
               target="_blank"
-              ><img src="/images/youtube-icon.svg" alt=""
+              ><img src="/images/icons/youtube-icon.svg" alt=""
             /></a>
           </li>
           <li>
@@ -40,7 +40,7 @@
               class="img_link"
               href="https://www.instagram.com/eftclub_terapias/"
               target="_blank"
-              ><img src="/images/instagram-icon.svg" alt=""
+              ><img src="/images/icons/instagram-icon.svg" alt=""
             /></a>
           </li>
           <li>
@@ -48,7 +48,7 @@
               class="img_link"
               href="https://www.facebook.com/profile.php?id=100080437803652"
               target="_blank"
-              ><img src="/images/facebook-icon.svg" alt=""
+              ><img src="/images/icons/facebook-icon.svg" alt=""
             /></a>
           </li>
         </ul>
