--- a/src/index.njk
+++ b/src/index.njk
@@ -19,20 +19,20 @@
     <!-- favicon -->
     <link
       rel="icon"
-      href="/images/favicon-16.png"
+      href="/images/icons/favicon-16.png"
       sizes="16x16"
       type="image/png"
     />
     <link
       rel="icon"
-      href="/images/favicon-32.png"
+      href="/images/icons/favicon-32.png"
       sizes="32x32"
       type="image/png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/images/apple-touch-icon.png"
+      href="/images/icons/apple-touch-icon.png"
     />
 
     <!-- SEO-->
@@ -97,7 +97,7 @@
                   href="https://wa.me/5521920172600"
                   target="_blank"
                 >
-                  <img src="/images/whatsapp-icon.svg" alt="" />
+                  <img src="/images/icons/whatsapp-icon.svg" alt="" />
                 </a>
               </li>
               <li>
@@ -106,7 +106,7 @@
                   href="https://www.instagram.com/eftclub_terapias/"
                   target="_blank"
                 >
-                  <img src="/images/instagram-icon.svg" alt="" />
+                  <img src="/images/icons/instagram-icon.svg" alt="" />
                 </a>
               </li>
               <li>
@@ -115,7 +115,7 @@
                   href="https://www.tiktok.com/@eftclub"
                   target="_blank"
                 >
-                  <img src="/images/tiktok-icon.svg" alt="" />
+                  <img src="/images/icons/tiktok-icon.svg" alt="" />
                 </a>
               </li>
             </ul>
@@ -130,19 +130,19 @@
         <h2>Terapia especializada em:</h2>
         <ul>
           <li>
-            <img src="/images/icon_gradient-circle.svg" alt="" />
+            <img src="/images/icons/icon_gradient-circle.svg" alt="" />
             <span>ansiedade</span>
           </li>
           <li>
-            <img src="/images/icon_gradient-circle.svg" alt="" />
+            <img src="/images/icons/icon_gradient-circle.svg" alt="" />
             <span>depressão</span>
           </li>
           <li>
-            <img src="/images/icon_gradient-circle.svg" alt="" />
+            <img src="/images/icons/icon_gradient-circle.svg" alt="" />
             <span>Traumas</span>
           </li>
           <li>
-            <img src="/images/icon_gradient-circle.svg" alt="" />
+            <img src="/images/icons/icon_gradient-circle.svg" alt="" />
             <span>Entre outros</span>
           </li>
         </ul>
@@ -337,19 +337,19 @@
           <h3>Adquirindo Uma Sessão por Vez</h3>
           <ul class="benefits-list">
             <li>
-              <img src="/images/icon_mark.svg" alt="" />
+              <img src="/images/icons/icon_mark.svg" alt="" />
               <span>Terapia online por videoconferência.</span>
             </li>
             <li>
-              <img src="/images/icon_mark.svg" alt="" />
+              <img src="/images/icons/icon_mark.svg" alt="" />
               <span>Sessões com duração de 1h a 1h30.</span>
             </li>
             <li>
-              <img src="/images/icon_mark.svg" alt="" />
+              <img src="/images/icons/icon_mark.svg" alt="" />
               <span>Anamnese e aplicação de técnicas alternativas.*</span>
             </li>
             <li>
-              <img src="/images/icon_mark.svg" alt="" />
+              <img src="/images/icons/icon_mark.svg" alt="" />
               <span>
                 Suporte contínuo pelo WhatsApp para tirar dúvidas em qualquer
                 momento do processo.
@@ -374,11 +374,11 @@
           <h3>Adquirindo Um Pacote de Quatro Sessões</h3>
           <ul>
             <li>
-              <img src="/images/icon_mark.svg" alt="" />
+              <img src="/images/icons/icon_mark.svg" alt="" />
               <span>Tudo do anterior</span>
             </li>
             <li>
-              <img src="/images/icon_filled-mark.svg" alt="" />
+              <img src="/images/icons/icon_filled-mark.svg" alt="" />
               <span>18% de desconto</span>
             </li>
           </ul>
@@ -398,6 +398,7 @@
         </div>
       </div>
     </section>
+    {% include "whatsapp-btn.njk" %}
     {% include "footer.njk" %}
   </body>
 </html>
