--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -275,3 +275,52 @@ footer {
     }
   }
 }
+
+//-------- Whatsapp float btn --------//
+
+.whatsapp-float {
+  position: fixed;
+  width: auto;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  color: white;
+  padding: 10px 18px;
+  border-radius: 50px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
+}
+
+.whatsapp-float:active {
+  transform: scale(0.95);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 480px) {
+  .whatsapp-float {
+    font-size: 0.8rem;
+    bottom: 15px;
+    right: 15px;
+
+    img {
+      width: 18px;
+      height: auto;
+    }
+  }
+}
+.whatsapp-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+}
