--- a/src/index.njk
+++ b/src/index.njk
@@ -147,14 +147,14 @@
           </li>
         </ul>
         <a
-          href="https://eftclub.com/contact-us-on-whatsapp"
+          href="https://wa.me/5521920172600"
           class="btn btn-mobile"
           >Agendar Sessão</a
         >
       </div>
       <div class="saber-mais">
         <p>
-          Sintomas como <a href="">ansiedade</a> e depressão resultam do acúmulo
+          Sintomas como <a href="/blog/tecnica_eft_para_ansiedade_passo_a_passo" target="_blank">ansiedade</a> e depressão resultam do acúmulo
           de vivências de medo e tristeza ao longo da vida. Através da terapia,
           ajudo você a trazer à tona essas memórias e liberar as emoções
           vinculadas a elas, eliminando assim a carga emocional que ainda
@@ -168,15 +168,15 @@
             <a
               href="/blog/passo-a-passo-de-como-aplicar-a-tecnica-de-liberacao-emocional-eft"
               class="btn btn_border"
-              >EFT</a
+              target="_blank">EFT</a
             >
           </li>
           <li>
             <a href="/blog/processo-terapeutico" class="btn btn_border"
-              >Processo Terapêutico</a
+              target="_blank">Processo Terapêutico</a
             >
           </li>
-          <li><a href="" class="btn btn_border">TRG</a></li>
+          <li><a href="/blog/desvendando-a-terapia-de-reprocessamento-generativo-trg" class="btn btn_border" target="_blank">TRG</a></li>
         </ul>
       </div>
     </section>
@@ -213,7 +213,7 @@
               src="/images/Registro-Profissional-ABRATH.webp"
               alt="Selo de registro profissional na Associação Brasileira dos Terapeutas Holísticos"
           /></a>
-          <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
+          <a href="https://wa.me/5521920172600" class="btn"
             >Agendar Sessão</a
           >
         </div>
@@ -361,13 +361,13 @@
             <p>Por sessão</p>
           </div>
           <a
-            href="https://eftclub.com/contact-us-on-whatsapp"
-            class="btn individual"
+            href="https://wa.me/5521920172600"
+            class="btn individual" target="_blank"
             >Agendar Sessão</a
           >
           <p class="obs">
-            *Técnicas alternativas: <a href="">Causa Raiz</a>,
-            <a href="">EFT</a> e <a href="">TRG</a>.
+            *Técnicas alternativas: <a href="/blog/processo-terapeutico#abordagens" target="_blank">Causa Raiz</a>,
+            <a href="/blog/passo-a-passo-de-como-aplicar-a-tecnica-de-liberacao-emocional-eft" target="_blank">EFT</a> e <a href="/blog/desvendando-a-terapia-de-reprocessamento-generativo-trg" target="_blank">TRG</a>.
           </p>
         </div>
         <div class="pacote">
@@ -391,7 +391,7 @@
             <p class="price">R$ 480</p>
           </div>
           <a
-            href="https://eftclub.com/contact-us-on-whatsapp"
+            href="https://wa.me/5521920172600"
             class="btn pacote"
             >Adquirir Pacote</a
           >
