--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,13 +46,11 @@ a {
   color: inherit;
 }
 
-ul[role=list],
-ol[role=list] {
+ul[role=list] {
   list-style: none;
 }
 
-ul,
-ol {
+ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -97,6 +95,10 @@ address {
   font-style: normal;
 }
 
+ol {
+  margin-left: 1rem;
+}
+
 p a {
   display: inline-block;
   line-height: 1.1;
@@ -129,6 +131,8 @@ p a:active {
   display: inline-block;
   box-shadow: none;
   padding: 0.75rem 2rem;
+  width: -moz-fit-content;
+  width: fit-content;
   font-weight: 700;
   font-size: clamp(1rem, 2vw, 1.1rem);
   background-color: #08aeaf;
