--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -45,13 +45,11 @@ a {
   color: inherit;
 }
 
-ul[role="list"],
-ol[role="list"] {
+ul[role='list'] {
   list-style: none;
 }
 
-ul,
-ol {
+ul {
   list-style: none;
   padding: 0;
   margin: 0;
