--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -54,6 +54,11 @@ address {
   font-style: normal;
 }
 
+//-------- list --------//
+ol {
+  margin-left: 1rem;
+}
+
 //-------- Links --------//
 
 p {
@@ -101,6 +106,7 @@ p {
   display: inline-block;
   box-shadow: none;
   padding: 0.75rem 2rem;
+  width: fit-content;
   font-weight: 700;
   font-size: clamp(1rem, 2vw, 1.1rem);
   background-color: $color-primary;
