--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- JS -->
-    <script src="/js/main.js" defer></script>
+    <script type="module" src="/js/main.js"></script>
 
     <!-- Google Fonts -->
     <link
@@ -14,7 +14,7 @@
     />
 
     <!-- Link to compiled CSS -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- favicon -->
     <link
