--- a/src/scss/style-blogs.scss
+++ b/src/scss/style-blogs.scss
@@ -1,11 +1,11 @@
-@import 'reset';
-@import 'variables';
+@use 'reset';
+@use 'variables';
 
 .container {
   margin: 5%;
   display: flex;
   justify-content: center;
-  @media (max-width: $mobile-break) {
+  @media (max-width: variables.$mobile-break) {
     flex-wrap: wrap;
   }
 
@@ -14,7 +14,7 @@
 
     .pub-date {
       padding-left: 10px;
-      border-left: 3px solid $color-secondary;
+      border-left: 3px solid variables.$color-secondary;
       font-size: 0.8rem;
     }
 
@@ -26,7 +26,7 @@
 
       img {
         width: clamp(60px, 10vw, 90px);
-        border: solid 3px $color-primary;
+        border: solid 3px variables.$color-primary;
         border-radius: 100px;
       }
 
@@ -44,14 +44,14 @@
     gap: 2rem;
     padding-right: 0;
 
-    @media (max-width: $mobile-break) {
+    @media (max-width: variables.$mobile-break) {
       padding: inherit;
       margin-top: 2rem;
     }
 
     .ajuda {
-      background-image: $color-background;
-      border: 3px solid $color-text;
+      background-image: variables.$color-background;
+      border: 3px solid variables.$color-text;
       border-radius: 30px;
       display: flex;
       flex-direction: column;
@@ -61,7 +61,7 @@
       gap: 3rem;
     }
     .artigos {
-      //   border: 3px solid $color-text;
+      //   border: 3px solid variables.$color-text;
       border-radius: 30px;
       display: flex;
       flex-direction: column;
@@ -74,7 +74,7 @@
         gap: 1rem;
 
         li {
-          border-left: 3px solid $color-primary;
+          border-left: 3px solid variables.$color-primary;
           padding-left: 0.5rem;
 
           p {
@@ -120,7 +120,7 @@
       overflow: hidden;
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      @media (max-width: $mobile-break) {
+      @media (max-width: variables.$mobile-break) {
         max-width: 130px;
       }
 
@@ -182,7 +182,7 @@
     max-width: 500px;
     margin: auto;
 
-    @media (max-width: $mobile-break) {
+    @media (max-width: variables.$mobile-break) {
       max-width: 100%;
       height: auto;
       display: block;
@@ -200,7 +200,7 @@
     margin-top: -1rem;
     font-size: 0.8rem;
   }
-  @media (max-width: $mobile-break) {
+  @media (max-width: variables.$mobile-break) {
     h1 {
       margin-top: 1rem;
     }
@@ -210,7 +210,7 @@
 .highlight {
   font-size: 1.8rem;
   font-weight: 700;
-  color: $color-secondary;
+  color: variables.$color-secondary;
   text-shadow:
     -1px -1px 1px rgba(255, 255, 255, 0.1),
     1px 1px 1px rgba(0, 0, 0, 0.5);
@@ -222,7 +222,36 @@
   width: fit-content;
   margin: 0 auto;
 
-  @media (max-width: $mobile-break) {
+  @media (max-width: variables.$mobile-break) {
     display: none;
   }
+}
+
+// search bar
+.search-input {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  margin: 2rem auto;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+
+.search-bar {
+  display: flex;
+  gap: 0.5rem;
+  margin-bottom: 1.5rem;
+
+  input {
+    flex: 1;
+  }
+}
+
+.search-message {
+  text-align: center;
+  font-style: italic;
+  color: #666;
+  margin-bottom: 1rem;
 }
