--- a/src/index.njk
+++ b/src/index.njk
@@ -191,16 +191,12 @@
             href="https://maps.app.goo.gl/xdwBKmU5331wy8iDA"
             target="_blank"
             class="img_link"
-            ><ul>
-              <li>
-                <img
+            >
+              <img class="avaliacao-google"
                   loading="lazy"
-                  src="/images/five-stars-eftclub.svg"
-                  alt="Avaliação de cinco estrelas"
-                />
-              </li>
-              <li><p>Avaliação do Google</p></li>
-            </ul></a
+                  src="/images/five-stars-eftclub.webp"
+                  alt="Avaliação de cinco estrelas no Google Meu Negócio"
+                /></a
           >
           <a
             target="_blank"
