--- a/src/scss/style-blogs.scss
+++ b/src/scss/style-blogs.scss
@@ -227,31 +227,49 @@
   }
 }
 
-// search bar
-.search-input {
-  display: block;
-  width: 100%;
-  max-width: 400px;
-  margin: 2rem auto;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-}
-
-.search-bar {
+//index
+.container-blogs {
   display: flex;
-  gap: 0.5rem;
-  margin-bottom: 1.5rem;
+  flex-direction: column;
+  margin: 2rem;
+  justify-content: center;
+  align-items: center;
 
-  input {
-    flex: 1;
+  .search-input {
+    display: block;
+    width: 100%;
+    max-width: 400px;
+    margin: 2rem auto;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+  }
+
+  .search-bar {
+    display: flex;
+    gap: 0.5rem;
+    margin-bottom: 1.5rem;
+
+    input {
+      flex: 1;
+    }
+  }
+
+  .search-message {
+    text-align: center;
+    font-style: italic;
+    color: #666;
+    margin-bottom: 1rem;
+  }
+
+  .tag-link {
+    // color: variables.$color-primary;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  .tag-link.active {
+    color: variables.$color-secondary;
   }
 }
-
-.search-message {
-  text-align: center;
-  font-style: italic;
-  color: #666;
-  margin-bottom: 1rem;
-}
+// search bar
