--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -198,6 +198,11 @@
     margin-bottom: 2rem;
   }
 
+  .avaliacao-google {
+    box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+
   .testimony_abrath {
     grid-area: abrath;
     display: flex;
