--- a/src/search.json.njk
+++ b/src/search.json.njk
@@ -8,7 +8,8 @@ eleventyExcludeFromCollections: true
   {
     "title": {{ post.data.title | dump | safe }},
     "url": {{ post.url | dump | safe }},
-    "description": {{ post.data.description | dump | safe }}
+    "description": {{ post.data.description | dump | safe }},
+    "tags": {{ post.data.tags | dump | safe }}
   }{%- if not loop.last -%},{%- endif -%}
   {%- endfor -%}
 ]
