--- a/src/_includes/base_blog.njk
+++ b/src/_includes/base_blog.njk
@@ -8,28 +8,23 @@
     <!-- JS -->
     <script type="module" src="/js/main.js"></script>
 
-    <link rel="stylesheet" href="/css/style-blogs.css">
+    <link rel="stylesheet" href="/css/style-blogs.css" />
 
-    <!-- SEO-->
-    <meta
-      name="description"
-      content="{{ description }}"
-    />
-
+    <!-- SEO -->
+    <meta name="description" content="{{ description }}" />
     <meta name="robots" content="index, follow" />
   </head>
   <body>
     {% include "header.njk" %}
-    
+
     <div class="container">
       <main class="post">
         <article class="post-content">
           <h1>{{ title }}</h1>
 
           <p class="pub-date">
-            Publicado em: <time datetime="{{ date | dateISO }}">
-              {{ date | readableDate }}
-            </time> 
+            Publicado em:
+            <time datetime="{{ date | dateISO }}">{{ date | readableDate }}</time>
 
             {% if lastUpdated and (date | updatedAfterSixMonths(lastUpdated)) %}
               e atualizado em:
@@ -46,15 +41,18 @@
               "image": "/images/authors/default.webp",
               "alt": "Default Author"
             } %}
-            
-            <img src="{{ authorInfo.image }}" alt="{{ authorInfo.alt }}" class="author-picture" />
+
+            <img
+              src="{{ authorInfo.image }}"
+              alt="{{ authorInfo.alt }}"
+              class="author-picture"
+            />
 
             <div class="autor-data">
-              <p>
-                <address>
-                  Autora: <br><strong>{{ author }}</strong>
-                </address>
-              </p>
+              <address>
+                Autora: <br />
+                <strong>{{ author }}</strong>
+              </address>
             </div>
           </div>
 
@@ -62,7 +60,7 @@
         </article>
       </main>
 
-      <section class="side-bar">
+      <aside class="side-bar">
         <div class="ajuda">
           <h2>Precisa da minha ajuda?</h2>
           <a href="/index" class="btn btn_border">Saiba Mais</a>
@@ -77,18 +75,19 @@
           {% if limitedPosts | length > 0 %}
             <ul>
               {% for post in limitedPosts %}
-                <a class="img_link" href="{{ post.url }}"><li>
-                  <h3>{{ post.data.title }}</h3>
-                  <p>Autora: {{ post.data.author }}</p>
-                </li></a>
+                <li class="img_link">
+                  <a href="{{ post.url }}">
+                    <h3>{{ post.data.title }}</h3>
+                    <p>Autora: {{ post.data.author }}</p>
+                  </a>
+                </li>
               {% endfor %}
             </ul>
           {% else %}
             <p>Nenhum outro artigo encontrado.</p>
           {% endif %}
-          
         </div>
-      </section>
+      </aside>
     </div>
 
     {% include "whatsapp-btn.njk" %}
